--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,6 +1,51 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container">
     <div class="row">
+        <div class="offset-1 col-md-10 mb-3 pt-3 card">
+            <h5 class="mb-3">Statistiky</h5>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Počet registrovaných uživatelů</p>
+                </div>
+                <div class="col-md-1">
+                    <%= registeredUsersCount %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Počet Premium uživatelů</p>
+                </div>
+                <div class="col-md-1">
+                    <%= premiumUsersCount %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Uživatelé aktivní v posledním týdnu</p>
+                </div>
+                <div class="col-md-1">
+                    X
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Aktivováno Premium v posledním týdnu</p>
+                </div>
+                <div class="col-md-1">
+                    X
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Deaktivováno Premium v posledním týdnu</p>
+                </div>
+                <div class="col-md-1">
+                    X
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-11 offset-1 mb-3">
             <h5>Registrovaní uživatelé</h5>
         </div>
