stats implementation - last week overview

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -24,7 +24,7 @@
                     <p>Uživatelé aktivní v posledním týdnu</p>
                 </div>
                 <div class="col-md-1">
-                    X
+                    <%= usersActiveInLastWeek %>
                 </div>
             </div>
             <div class="row">
@@ -32,7 +32,15 @@
                     <p>Aktivováno Premium v posledním týdnu</p>
                 </div>
                 <div class="col-md-1">
-                    X
+                    <%= premiumActivationsInLastWeek %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Prodlouženo Premium v posledním týdnu</p>
+                </div>
+                <div class="col-md-1">
+                    <%= premiumUpdatesInLastWeek %>
                 </div>
             </div>
             <div class="row">
@@ -40,7 +48,7 @@
                     <p>Deaktivováno Premium v posledním týdnu</p>
                 </div>
                 <div class="col-md-1">
-                    X
+                    <%= premiumDeactivationsInLastWeek %>
                 </div>
             </div>
         </div>
