--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -40,7 +40,7 @@
                         <div class="card-header">Měsíční</div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
                             <div class="price-tag-inner">
-                                <span class="price">99 Kč</span> / <span class="period">měsíčně</span>
+                                <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
                         <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
@@ -58,7 +58,7 @@
                         <div class="card-header">Roční</div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
                             <div class="price-tag-inner">
-                                <span class="price">990 Kč</span> / <span class="period">ročně</span>
+                                <span class="price">1 490 Kč</span> / <span class="period">ročně</span>
                             </div> 
                         </div>
                         <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
