--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,6 +13,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/admin/listAllReports">Nahlášené chyby</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/email">Email</a>
+            </li>
           <% } %>
         </ul>
         <ul class="navbar-nav ms-auto">
