warning modal for payments (yearly to monthly)

--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -28,6 +28,12 @@
                     Zaslat všem uživatelům, kteří neodmítli zasílání e-mailů
                     </label>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="groupChoice" id="radioTest" value="radioTest">
+                    <label class="form-check-label" for="radioTest">
+                    Testovací e-mail (zašle jen na pravnicime@gmail.com)
+                    </label>
+                </div>
                 <button class="btn btn-danger mt-3">Odeslat hromadný e-mail</button>
             </form>
         </div>
