--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -40,12 +40,21 @@
                     </div>
                     <div class="mt-3">
                         <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="vop" id="vop" required>
+                            <label class="form-check-label text-small registration-gdpr" for="vop">
+                                Souhlasím se <a href="/legal/vop" target="_blank">všeobecnými obchodními podmínkami</a>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="mt-0">
+                        <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="gdpr" id="gdpr" required>
                             <label class="form-check-label text-small registration-gdpr" for="gdpr">
                                 Beru na vědomí <a href="/legal/gdpr" target="_blank">podmínky zpracování osobních údajů</a>
                             </label>
                         </div>
                     </div>
+                    
                     <div>
                     <button class="btn btn-danger w-100 mt-3" type="submit">Zaregistrovat</button>
                     </div>
