deleting sections - remove sectionId from users sections and unfinishedSections arrays plus contact page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="d-flex flex-row justify-content-between text-small">
             <div><span>&copy; InLege 2023</span></div>
             <div class="d-flex flex-row justify-content-between">
-                <div class="mx-2"><a href="/" class="footer-link">Kontakt</a></div>
+                <div class="mx-2"><a href="/legal/contact" class="footer-link">Kontakt</a></div>
                 <div class="mx-2"><a href="/legal/vop" class="footer-link">Obchodní podmínky</a></div>
                 <div class="mx-2"><a href="/legal/gdpr" class="footer-link">Ochrana osobních ůdajů</a></div>
             </div>
