--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -41,7 +41,7 @@
                 <div class="card front text-center shadow">  
                   <div class="card-body d-block">
                     <div class="d-flex justify-content-center align-items-center min-height-300px">
-                      <div class="card-text pageA m-4" id="pageA"><%- card.pageA %> </div>
+                      <div class="card-text pageA m-4" id="pageA"><b><%- card.pageA %></b></div>
                     </div>
                   </div>
                   <div class="card-footer d-flex justify-content-center">
