added procesni sekce

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,36 +115,68 @@
                         </div>
                     </div>
                 </div>
+
             <div class="row">
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/trestnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_trest.jpeg" class="rounded-circle landing-img m-3" alt="">
                             </div>
                             <div class="card-body cat-text">
-                                <h5 class="card-title">Trestní právo</h5>
+                                <h5 class="card-title">Trestní právo <br> hmotné</h5>
                                 <p class="text-muted"><%= trestnipravo.numOfCards %>  kartiček</p>
                                 <a href="/category/trestnipravo" class="btn btn-sm btn-danger">Studovat</a>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                    <a href="/category/trestniproces" class="landing-link">
+                        <div class="card shadow">
+                            <div class="d-flex justify-content-center">
+                                <img src="/img/landing_trest.jpeg" class="rounded-circle landing-img m-3" alt="">
+                            </div>
+                            <div class="card-body cat-text">
+                                <h5 class="card-title">Trestní právo <br> procesní</h5>
+                                <p class="text-muted"><%= trestniproces.numOfCards %>  kartiček</p>
+                                <a href="/category/trestniproces" class="btn btn-sm btn-danger">Studovat</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/obcanskepravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_obcan.jpeg" class="rounded-circle landing-img m-3" alt="">
                             </div>
                             <div class="card-body cat-text">
-                                <h5 class="card-title">Občanské právo</h5>
+                                <h5 class="card-title">Občanské právo <br> hmotné</h5>
                                 <p class="text-muted"><%= obcanskepravo.numOfCards %> kartiček</p>
                                 <a href="/category/obcanskepravo" class="btn btn-sm btn-danger">Studovat</a>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                    <a href="/category/civilniproces" class="landing-link">
+                        <div class="card shadow">
+                            <div class="d-flex justify-content-center">
+                                <img src="/img/landing_obcan.jpeg" class="rounded-circle landing-img m-3" alt="">
+                            </div>
+                            <div class="card-body cat-text">
+                                <h5 class="card-title">Občanské právo <br> procesní</h5>
+                                <p class="text-muted"><%= civilniproces.numOfCards %> kartiček</p>
+                                <a href="/category/civilniproces" class="btn btn-sm btn-danger">Studovat</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row mt-lg-4">
+                <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/spravnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
@@ -158,7 +190,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/ustavnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
@@ -172,7 +204,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/obchodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
@@ -186,7 +218,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/mezinarodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
