--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                     <p class="lead">Pusť se do studia práv se sadou stovek kartiček s otázkami a odpověďmi. Skvělá interaktivní příprava na zkoušky.</p>        
                     <div class="mt-5">
                         <% if(!currentUser){ %> 
-                            <a href="/auth/user/new" class="btn btn-lg btn-danger">Registrace zdarma</a>
+                            <a href="/auth/user/new" class="btn btn-lg btn-danger">Studuj zdarma</a>
                         <% } %> 
                     </div>
                 </div>
