landing pictures change and category icons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
                             <i class="fas fa-scroll fa-3x text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">1 235 kartiček zdarma</p>
+                            <p class="info-main">1 235 opakovacích kartiček</p>
                             <p class="info-secondary text-muted">a přibývají</p>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                             <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">6 právních oblastí </p>
+                            <p class="info-main">8 právních oblastí </p>
                             <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                                     <i class="fas fa-scroll fa-3x text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">1 235 kartiček zdarma</p>
+                                    <p class="info-main">1 235 opakovacích kartiček</p>
                                     <p class="info-secondary text-muted">a přibývají</p>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                     <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">6 právních oblastí </p>
+                                    <p class="info-main">8 právních oblastí </p>
                                     <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                     <a href="/category/trestniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_trest.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <img src="/img/landing_trestniproces.jpeg" class="rounded-circle landing-img m-3" alt="">
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Trestní právo <br> procesní</h5>
@@ -163,7 +163,7 @@
                     <a href="/category/civilniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_obcan.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <img src="/img/landing_civilniproces.jpeg" class="rounded-circle landing-img m-3" alt="">
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Občanské právo <br> procesní</h5>
