--- a/views/category.ejs
+++ b/views/category.ejs
@@ -33,9 +33,11 @@
                     <% if(category.name === "trestnipravo"){ %> <i class="fas fa-book-dead"></i> <% } %>
                     <% if(category.name === "obcanskepravo"){ %> <i class="fas fa-book"></i> <% } %>
                     <% if(category.name === "spravnipravo"){ %> <i class="fas fa-journal-whills"></i> <% } %>
-                    <% if(category.name === "ustavnipravo"){ %> <i class="fas fa-balance-scale-right"></i> <% } %>
+                    <% if(category.name === "ustavnipravo"){ %> <i class="fas fa-university"></i> <% } %>
                     <% if(category.name === "obchodnipravo"){ %> <i class="far fa-handshake"></i> <% } %>
                     <% if(category.name === "mezinarodnipravo"){ %> <i class="fas fa-globe-europe"></i> <% } %>
+                    <% if(category.name === "trestniproces"){ %> <i class="fas fa-gavel"></i> <% } %>
+                    <% if(category.name === "civilniproces"){ %> <i class="fas fa-balance-scale-right"></i> <% } %>
                     
                 </div>
                 <p class="mt-4 mb-2"><%= title %> </p>
